# eta

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
src/: code_editor.rs  main.rs
src/panels/: bottom_panel.rs  left_side_panel.rs  main_panel.rs  mod.rs
src/terminal/: into.rs  mod.rs  prelude.rs  render.rs  term.rs
src/terminal/config/: mod.rs  term_config.rs
src/terminal/error/: conversion.rs
