[package]
name = "eta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
eframe = { version = "0.26.2", features = ["persistence"] }
env_logger = "0.11.2"
raw-window-handle = "0.6.0"
rfd = "0.13.0"
serde = { version = "1.0.196", features = ["derive"] }
