[package]
name = "eta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
ecolor = "0.26.2"
eframe = { version = "0.26.2", features = ["persistence"] }
env_logger = "0.11.2"
rfd = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
crossbeam-channel = { version = "0.5.8", features = ["std"] }
portable-pty = { version = "0.8.1", features = ["serde_support"] }
wezterm-term = { version = "0.1.0", git = "https://github.com/wez/wezterm", features = [
    "use_serde",
] }
termwiz = { version = "0.22.0", git = "https://github.com/wez/wezterm", features = [
    "use_serde",
] }
sysinfo = { version = "0.30.5", features = ["serde"] }
